--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap");
 body {
   font-family: system-ui, sans-serif;
-}
+}/*
 h1,
 h2,
 h3,
@@ -10,3 +9,4 @@ h5,
 h6 {
   font-family: "Yeseva One", serif;
 }
+*/
