--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,18 @@
   margin: 0;
   padding: 0;
 }
+.noise::before {
+  content: "";
+  display: inline-block;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  z-index: 100;
+  background-image: url(../public/noise.gif);
+  opacity: 0.2;
+  pointer-events: none;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+}
